--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+
 <div>DZHOPA</div>
+
+<div id="#app"></div>
+
 <script src="build/bundle.js"></script>
+
 </body>
 </html>
